cluster/core/kube-system/dashboard/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8s.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: heimdall
          namespace: monitoring
          port: 80
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "k8s-${SECRET_DOMAIN/./-}-tls"
